# orgasmic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  TASK-SZEWA-summary.md
.github/workflows/: nightly-android.yml  nightly-macos.yml  nightly-runtime.yml  release-android.yml  release-macos.yml  release-runtime.yml  runtime-bundles.yml
.orgasmic/: architecture.org  config.org  decisions.org  entry.org  glossary.org  gotchas.org  graph_layout.org  project.org
.orgasmic/artifacts/ART-04FYD/: artifact.mdx  artifact.org  reviews.org
.orgasmic/conventions/: concurrent-writer.org  contributing.org  decision-graph.org  no-skill-installed.org  orgasmic-tooling.org
.orgasmic/tasks/: backlog.org  cancelled.org  done.org  goal.org  handoff.org  in_progress.org  in_review.org  todo.org
.orgasmic/tx/: 2026-06.org  2026-07.org
archive/: grilling-session-local-first-cockpit-report.md
archive/21_05_26_init/: spec.html
crates/orgasmic-cli/: Cargo.toml
crates/orgasmic-cli/src/: architecture_drift.rs  artifact.rs  content_lifecycle.rs  daemon_client.rs  daemon_lifecycle.rs  daemon_runtime.rs  daemon_service.rs  doctor.rs  goal.rs  home.rs  install_state.rs  main.rs  manager.rs  member.rs  node.rs  path_env.rs  test_support.rs  update.rs
crates/orgasmic-cli/tests/: artifact_blocks_contract.rs  bootstrap_smoke.rs  cli_parity.rs  daemon_lifecycle.rs  dispatch.rs  doctor.rs  entry.rs  id_collision_repair.rs  id_mint.rs  init.rs  list_output.rs  logging_sink.rs  manager_register.rs  pinned_exec.rs  reindex.rs  status.rs  ui.rs
crates/orgasmic-cli/tests/common/: mod.rs
crates/orgasmic-core/: Cargo.toml
crates/orgasmic-core/src/: eligibility.rs  home.rs  id.rs  id_repair.rs  identity_lint.rs  lib.rs  marker.rs  members.rs  node_kind.rs  org.rs  paths.rs  projects.rs  sandbox.rs  schema.rs  schema_examples.rs  session.rs  slots.rs  tx.rs  workers.rs
crates/orgasmic-core/tests/: fixtures.rs
crates/orgasmic-daemon/: Cargo.toml  build.rs
crates/orgasmic-daemon/src/: addressing.rs  api.rs  artifacts.rs  auth.rs  authz.rs  boot_state.rs  config.rs  content.rs  events.rs  governance.rs  index.rs  lib.rs  logging.rs  manager_registration.rs  prompt_compiler.rs  recovery_claim.rs  runtime.rs  supervisor.rs  watcher.rs  writer.rs  ws.rs
crates/orgasmic-daemon/tests/: body_format_raw.rs  body_write_guard.rs  dispatch_endpoint.rs  dispatch_worktree_layout.rs  duplicate_write.rs  graph_layout.rs  id_mint.rs  identity_lint.rs  integration.rs  logging_sink.rs  recovery_fault_restart.rs  rmux_release.rs  writer_durability.rs
crates/orgasmic-daemon/tests/common/: mod.rs
crates/orgasmic-drivers/: Cargo.toml
crates/orgasmic-drivers/src/: lib.rs  runtime_options.rs  sandbox.rs  trait.rs  transcript_finder.rs
crates/orgasmic-drivers/src/adapters/: claude.rs  codex.rs  cursor.rs  cursor_acp.rs  hermes.rs  mod.rs  shell.rs
crates/orgasmic-drivers/src/modes/: acp_stdio.rs  acp_ws.rs  jsonrpc.rs  mod.rs  rmux.rs  subprocess_stream_json.rs  tmux.rs
crates/orgasmic-drivers/tests/: cursor_agent.rs  driver_modes.rs
crates/orgasmic-drivers/tests/fixtures/: cursor_acp_nested_execute_permission.json  cursor_acp_nested_pwd_permission.json  cursor_acp_prompt_response_before_tool_completion.json  cursor_agent_partial.jsonl
scripts/: install-macos-app.sh  install.sh  package-runtime.sh  prepare-tauri-sidecars.sh  publish-apps.sh  publish-runtime.sh  sync-release-metadata.sh
shipped/entry/: router.org
shipped/project-scaffold/conventions/: manager-implementer.org  no-skill-installed.org  orgasmic-tooling.org
shipped/project-scaffold/tasks/: backlog.org  done.org  goal.org  in_review.org
shipped/prompt-studio/: conventions.org  slots.org
shipped/prompt-studio/context-packs/: active_goal.org  architecture.org  conventions.org  decisions.org  glossary.org  gotchas.org  manager_handoff.org  project_state.org  skills_workers.org  sprint_tasks.org  tx_session_telemetry.org
shipped/prompt-studio/conventions/: architecture_decomposition.org  daemon-rebuild-restart-policy.org  manager-contribution.org  manager-dispatch.org  manager-handoff.org  node-references.org  rescue-policy.org  tx-scannable-bodies.org
shipped/prompt-studio/prompt-parts/: code_marker_policy.org  command_session_policy.org  dynamic_workflow_policy.org  graph_authoring_policy.org  grill_domain_policy.org  implementation_scope_policy.org  planning_policy.org  prompt_quality_policy.org  retro_policy.org  source_of_truth_inputs.org  structured_output_contract.org  verification_policy.org
shipped/prompt-studio/prompt-specs/: architector.org  artifact-generator.org  babysitter.org  base_worker.org  general_worker.org  graph_curator.org  griller.org  implementer.org  manager.org  planner.org  prompt_composer.org  retro.org  reviewer.org
shipped/schema/: state-machine.org  tx.org
shipped/skills/orgasmic/: SKILL.md
shipped/workers/: architector.org  artifactor-acp.org  artifactor.org  babysitter-stall-detector.org  griller.org  implementer-claude-acp.org  implementer-claude-rmux.org  implementer-claude-tmux.org  implementer-codex-acp.org  implementer-codex-appserver.org  implementer-codex-rmux.org  implementer-codex-tmux.org  implementer-composer-acp.org  implementer-cursor.org  implementer-hermes.org  implementer-tmux-cursor.org  planner.org  reviewer-claude-rmux.org  reviewer-codex-acp.org  reviewer-cursor.org  reviewer.org
shipped/workflows/: default.org
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tmp/: TASK-ZB90M-summary.md  task-r28cp-summary.md
ui/: .gitignore  README.md  bootstrap.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.bootstrap.config.ts  vite.config.ts  vitest.config.ts
ui/src/: bootstrap.ts  main.tsx  styles.css  vite-env.d.ts
ui/src/app/: App.tsx  router.tsx  routes.ts
ui/src/components/: ActivityView.tsx  AppShell.tsx  ArchitectureView.tsx  ArtifactView.tsx  ArtifactsView.tsx  BoardRouteView.tsx  (+25 more)
(+160 files in other folders)
