[workspace]
resolver = "2"
members = [
    "crates/orgasmic-core",
    "crates/orgasmic-daemon",
    "crates/orgasmic-cli",
    "crates/orgasmic-drivers",
]

[workspace.package]
version = "0.0.13"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/theaspirational/orgasmic"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
notify = "6"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
semver = "1"
include_dir = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures = "0.3"
portable-pty = "0.8"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
tokio-tungstenite = "0.24"

# Size-optimized release build for the CLI/daemon runtime bundle.
# Uses opt-level "s" (not "z") and keeps the default unwind panic strategy so a
# panicking request handler does not abort the long-running daemon. The embedded
# UI bytes are fixed regardless of profile; this trims the code/symbol portion.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
