[package]
name = "orgasmic-desktop"
version = "0.0.7"
description = "orgasmic desktop workbench"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/theaspirational/orgasmic"

[lib]
name = "orgasmic_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
orgasmic-core = { path = "../crates/orgasmic-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
url = "2"
# Reuses the rustls stack already pulled in by tauri-plugin-updater (no native-tls);
# used by check_android_update to fetch the sideload manifest in-process (no CORS).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Android: reqwest's rustls stack (shared with tauri + tauri-plugin-updater) uses
# rustls-platform-verifier for certificate validation, which MUST be handed the
# JVM + Activity context before the first TLS handshake or it aborts the process
# ("Expect rustls-platform-verifier to be initialized"). We do that in run()'s
# setup hook (see init_android_cert_verifier). These versions deliberately match
# the already-resolved transitive versions so Cargo unifies to a single instance
# (same verifier GLOBAL, same jni types). NOTE: `tao` is reached for its live
# Android context accessor — keep it in lockstep with the tao that tauri pulls.
[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.7"
jni = "0.22"
tao = "0.35"

# Size-optimized release build for the desktop app and Android lib.
# Shrinks both the macOS .app/.dmg and the Android .so.
[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization across crates
codegen-units = 1    # better cross-module size optimization
panic = "abort"      # drop unwinding tables
strip = true         # strip symbols from the binary
