[package]
name = "orgasmic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "orgasmic"
path = "src/main.rs"

[dependencies]
orgasmic-core = { path = "../orgasmic-core" }
orgasmic-daemon = { path = "../orgasmic-daemon" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
semver.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
fs2 = { workspace = true }
