[package]
name = "orgasmic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
tracing.workspace = true
fs2.workspace = true
rand.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
