[package]
name = "orgasmic-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
orgasmic-core = { path = "../orgasmic-core" }
orgasmic-drivers = { path = "../orgasmic-drivers" }
async-trait = "0.1"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
notify.workspace = true
fs2.workspace = true
chrono.workspace = true
uuid.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
portable-pty.workspace = true
subtle.workspace = true
rand.workspace = true
sha2.workspace = true
include_dir.workspace = true
libc = "0.2"
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true

[lib]
path = "src/lib.rs"
