[package]
name = "orgasmic-drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
orgasmic-core = { path = "../orgasmic-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
libc = "0.2"
reqwest.workspace = true
tokio-tungstenite.workspace = true
# rmux hybrid driver (TASK-104): typed session control. The SDK starts or
# connects to a daemon but does NOT bundle the `rmux` binary, so the driver
# discovers/provisions that separately (RMUX_SDK_DAEMON_BINARY or PATH).
rmux-sdk = "0.5"

[dev-dependencies]
tempfile = "3"
fs2 = { workspace = true }
filetime = "0.2"

[lib]
path = "src/lib.rs"
